# sherpa_unihb

./: .gitignore  README.md
models/sherpa_human/: model.config  sphere_actor.sdf
models/sherpa_map/: model.config  sherpa_map.sdf
models/sherpa_rover/: model.config  sherpa_rover.sdf  sherpa_rover_1.2.sdf
models/sherpa_rover/meshes/: Body.dae  Box.dae  Loose_Wheel.dae  Main_Wheel.dae
ros/sherpa_gazebo/: CMakeLists.txt  mainpage.dox  manifest.xml
ros/sherpa_gazebo/.kdev4/: sherpa_gazebo.kdev4
ros/sherpa_gazebo/media/: Material.material  Sherpa_human.mesh  hat.material  jacket.material  sherpa.scene  skin.material
ros/sherpa_gazebo/msgs/: CMakeLists.txt  sherpa_animation_pose.proto  sherpa_position.proto
ros/sherpa_gazebo/scripts/: sherpa_gazebo.py
ros/sherpa_gazebo/src/: ActorFactoryPlugin.hh  ActorFactoryPluginJoints.cpp  SherpaColladaLoader.hh  SherpaGazebo.hpp  SherpaGuiPlugin.cpp  SherpaGuiPlugin.hh  SherpaHuman.cpp
ros/sherpa_teleop/: mainpage.dox  manifest.xml
sherpa/sherpa/: CMakeLists.txt  package.xml
sherpa/sherpa_control_panel/: #CMakeLists.txt#  CMakeLists.txt  package.xml
sherpa/sherpa_control_panel/include/sherpa_control_panel/: RosConnector.hpp  SherpaMainWindow.hpp  SherpaRobot.hpp  SherpaRobotDock.hpp  SherpaRobotManager.hpp  SherpaRobotStateListener.hpp  SherpaRobotTreeItem.hpp  SherpaRobotTreeModel.hpp  SherpaWorldManger.hpp  SherpaWorldStateListener.hpp  Singleton.hpp
sherpa/sherpa_control_panel/launch/: control_panel_with_gazebo.launch  controll_panel.launch
sherpa/sherpa_control_panel/src/: #SherpaRosConnnector.cpp#  #main.cpp#  SherpaMainWindow.cpp  SherpaRobotDock.cpp  SherpaRobotTreeItem.cpp  SherpaRobotTreeModel.cpp  SherpaRosConnnector.cpp  main.cpp
sherpa/sherpa_control_panel/ui/: CMakeLists.txt  LogDock.ui  RobotDock.ui  RosDock.ui  SherpaMain.ui  Sherpa_Control  WorldDock.ui
sherpa/sherpa_gazebo/: CMakeLists.txt  package.xml
sherpa/sherpa_gazebo/launch/: ardrone.launch  base_camp.launch  hector.launch  hector_from_file.launch  hector_from_file_2.launch  rmax.launch  rover.launch  sherpa.launch  sherpa_ardrone.launch  sherpa_basecamp.launch  sherpa_controller.launch  sherpa_hector.launch  sherpa_hector_1.launch  sherpa_human_sphere.launch  sherpa_rmax.launch  sherpa_rover.launch  sherpa_without_rover.launch  test.launch
sherpa/sherpa_gazebo/worlds/: sherpa.world
sherpa/sherpa_gazebo_plugins/: CMakeLists.txt  package.xml
sherpa/sherpa_gazebo_plugins/media/: Sherpa_human.mesh.xml  Sherpa_human.skeleton  gloves.material  shoes.material  sole.material  trousers.material
sherpa/sherpa_gazebo_plugins/msgs/: CMakeLists.txt
sherpa/sherpa_gazebo_plugins/scripts/: sherpa_gazebo.py
sherpa/sherpa_gazebo_plugins/src/: .SherpaGuiPlugin.cpp.kate-swp  SherpaCameraPlugin.hpp  SherpaGuiPlugin.cpp  SherpaHuman.cpp  SherpaHuman.hpp
sherpa/sherpa_model_control/sherpa_human_teleop/: CMakeLists.txt  package.xml
sherpa/sherpa_model_control/sherpa_human_teleop/scripts/: sherpa_keyboard_teleop.py
sherpa/sherpa_model_control/sherpa_model_control/: CMakeLists.txt  package.xml
sherpa/sherpa_model_control/sherpa_rover_control/: CMakeLists.txt  package.xml
sherpa/sherpa_model_control/sherpa_rover_control/config/: sherpa_rover_ros_control.yaml
sherpa/sherpa_model_control/sherpa_rover_control/launch/: sherpa_rover_control.launch
sherpa/sherpa_model_control/sherpa_rover_gazebo/: CMakeLists.txt  package.xml
sherpa/sherpa_model_control/sherpa_rover_gazebo/launch/: rover.launch
sherpa/sherpa_model_control/sherpa_rover_gazebo/worlds/: sherpa.world
sherpa/sherpa_models/sherpa_base_camp_description/: CMakeLists.txt  model.config  package.xml
sherpa/sherpa_models/sherpa_base_camp_description/urdf/: sherpa_base_camp.urdf
sherpa/sherpa_models/sherpa_hector_description/: CMakeLists.txt  model.config  package.xml
sherpa/sherpa_models/sherpa_hector_description/urdf/: hector.urdf  hector2.urdf
sherpa/sherpa_models/sherpa_human_dummy_description/: CMakeLists.txt  model.config  package.xml
sherpa/sherpa_models/sherpa_human_dummy_description/sdf/: sherpa_human_dummy_sphere.sdf
sherpa/sherpa_models/sherpa_map_description/: CMakeLists.txt  model.config  package.xml
sherpa/sherpa_models/sherpa_map_description/images/: cost_map.ppm
sherpa/sherpa_models/sherpa_map_description/sdf/: #sherpa_map.sdf#  sherpa_map.sdf
sherpa/sherpa_models/sherpa_map_description/src/: SherpaMapPlugin.cpp
sherpa/sherpa_models/sherpa_models/: CMakeLists.txt  package.xml
sherpa/sherpa_models/sherpa_rmax_description/: CMakeLists.txt  model.config  package.xml
sherpa/sherpa_models/sherpa_rmax_description/meshes/: rmax_textured.dae
sherpa/sherpa_models/sherpa_rmax_description/tmp/: test2.sdf
sherpa/sherpa_models/sherpa_rmax_description/tmp/meshes/: Arm_Part_1.dae  Box.dae
sherpa/sherpa_models/sherpa_rmax_description/urdf/: sherpa_rmax.urdf
sherpa/sherpa_models/sherpa_rover_description/: CMakeLists.txt  model.config  package.xml
sherpa/sherpa_models/sherpa_rover_description/meshes/: Arm_Base.dae  Arm_Base_Col.dae  Arm_Gripper.dae  Arm_Gripper_Col.dae  Arm_Part_1_Col.dae  Arm_Part_2.dae  Arm_Part_2_Col.dae  Full_Body_Col.dae  Loose_Wheel.dae  Loose_Wheel_Col.dae  Main_Wheel.dae  Main_Wheel_Col.dae
sherpa/sherpa_models/sherpa_rover_description/tmp/: model.config  sherpa_rover.urdf
sherpa/sherpa_models/sherpa_rover_description/tmp/meshes/: Body.dae
sherpa/sherpa_models/sherpa_rover_description/urdf/: sherpa_rover.urdf
sherpa/sherpa_msgs/: CMakeLists.txt  package.xml
sherpa/sherpa_msgs/msg/: SherpaAnimation.msg  SherpaAtPosition.msg  SherpaHumanTwist.msg  SherpaLog.msg  SherpaMoveTo.msg  SherpaPosition.msg
sherpa/sherpa_msgs/srv/: ConvertFromMapPosition.srv  ConvertToMapPosition.srv
worlds/: rover.world  sherpa.world  sherpa_factory.world
