<?xml version="1.0"?>
<package>
  <name>sherpa_control_panel</name>
  <version>0.1.0</version>
  <description>

  This Package is in an early development state.
  
  
  This package will be used to control specific robots inside Sherpa-Simulation

  </description>
  <maintainer email="bbrieber@tzi.de">bbrieber</maintainer>
  <author>bbrieber</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>sherpa_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>sherpa_msgs</run_depend>
  
</package>
